tests/baselines/reference/strictFunctionTypesErrors.errors.txt
tests/cases/compiler/strictFunctionTypesErrors.ts(10,1): error TS2322: Type '(x: string) => Object' is not assignable to type '(x: Object) => Object'.
  Types of parameters 'x' and 'x' are incompatible.
    Type 'Object' is not assignable to type 'string'.
tests/cases/compiler/strictFunctionTypesErrors.ts(11,1): error TS2322: Type '(x: string) => string' is not assignable to type '(x: Object) => Object'.
  Types of parameters 'x' and 'x' are incompatible.
    Type 'Object' is not assignable to type 'string'.
tests/cases/compiler/strictFunctionTypesErrors.ts(13,1): error TS2322: Type '(x: Object) => Object' is not assignable to type '(x: Object) => string'.
  Type 'Object' is not assignable to type 'string'.
tests/cases/compiler/strictFunctionTypesErrors.ts(14,1): error TS2322: Type '(x: string) => Object' is not assignable to type '(x: Object) => string'.
  Types of parameters 'x' and 'x' are incompatible.
    Type 'Object' is not assignable to type 'string'.
tests/cases/compiler/strictFunctionTypesErrors.ts(15,1): error TS2322: Type '(x: string) => string' is not assignable to type '(x: Object) => string'.
  Types of parameters 'x' and 'x' are incompatible.
    Type 'Object' is not assignable to type 'string'.
tests/cases/compiler/strictFunctionTypesErrors.ts(21,1): error TS2322: Type '(x: Object) => Object' is not assignable to type '(x: string) => string'.
  Type 'Object' is not assignable to type 'string'.
tests/cases/compiler/strictFunctionTypesErrors.ts(23,1): error TS2322: Type '(x: string) => Object' is not assignable to type '(x: string) => string'.
  Type 'Object' is not assignable to type 'string'.
tests/cases/compiler/strictFunctionTypesErrors.ts(33,1): error TS2322: Type 'Func<string, Object>' is not assignable to type 'Func<Object, Object>'.
  Type 'Object' is not assignable to type 'string'.
tests/cases/compiler/strictFunctionTypesErrors.ts(34,1): error TS2322: Type 'Func<string, string>' is not assignable to type 'Func<Object, Object>'.
  Type 'Object' is not assignable to type 'string'.
tests/cases/compiler/strictFunctionTypesErrors.ts(36,1): error TS2322: Type 'Func<Object, Object>' is not assignable to type 'Func<Object, string>'.
  Type 'Object' is not assignable to type 'string'.
tests/cases/compiler/strictFunctionTypesErrors.ts(37,1): error TS2322: Type 'Func<string, Object>' is not assignable to type 'Func<Object, string>'.
  Type 'Object' is not assignable to type 'string'.
tests/cases/compiler/strictFunctionTypesErrors.ts(38,1): error TS2322: Type 'Func<string, string>' is not assignable to type 'Func<Object, string>'.
  Type 'Object' is not assignable to type 'string'.
tests/cases/compiler/strictFunctionTypesErrors.ts(44,1): error TS2322: Type 'Func<Object, Object>' is not assignable to type 'Func<string, string>'.
  Type 'Object' is not assignable to type 'string'.
tests/cases/compiler/strictFunctionTypesErrors.ts(46,1): error TS2322: Type 'Func<string, Object>' is not assignable to type 'Func<string, string>'.
  Type 'Object' is not assignable to type 'string'.
tests/cases/compiler/strictFunctionTypesErrors.ts(57,1): error TS2322: Type 'Func<Func<Object, void>, Object>' is not assignable to type 'Func<Func<Object, void>, string>'.
  Type 'Object' is not assignable to type 'string'.
tests/cases/compiler/strictFunctionTypesErrors.ts(58,1): error TS2322: Type 'Func<Func<string, void>, Object>' is not assignable to type 'Func<Func<Object, void>, string>'.
  Type 'Object' is not assignable to type 'string'.
tests/cases/compiler/strictFunctionTypesErrors.ts(61,1): error TS2322: Type 'Func<Func<Object, void>, Object>' is not assignable to type 'Func<Func<string, void>, Object>'.
  Type 'Func<string, void>' is not assignable to type 'Func<Object, void>'.
    Type 'Object' is not assignable to type 'string'.
tests/cases/compiler/strictFunctionTypesErrors.ts(62,1): error TS2322: Type 'Func<Func<Object, void>, string>' is not assignable to type 'Func<Func<string, void>, Object>'.
  Type 'Func<string, void>' is not assignable to type 'Func<Object, void>'.
tests/cases/compiler/strictFunctionTypesErrors.ts(65,1): error TS2322: Type 'Func<Func<Object, void>, Object>' is not assignable to type 'Func<Func<string, void>, string>'.
  Type 'Func<string, void>' is not assignable to type 'Func<Object, void>'.
tests/cases/compiler/strictFunctionTypesErrors.ts(66,1): error TS2322: Type 'Func<Func<Object, void>, string>' is not assignable to type 'Func<Func<string, void>, string>'.
  Type 'Func<string, void>' is not assignable to type 'Func<Object, void>'.
tests/cases/compiler/strictFunctionTypesErrors.ts(67,1): error TS2322: Type 'Func<Func<string, void>, Object>' is not assignable to type 'Func<Func<string, void>, string>'.
  Type 'Object' is not assignable to type 'string'.
tests/cases/compiler/strictFunctionTypesErrors.ts(74,1): error TS2322: Type 'Func<Object, Func<string, void>>' is not assignable to type 'Func<Object, Func<Object, void>>'.
  Type 'Func<string, void>' is not assignable to type 'Func<Object, void>'.
tests/cases/compiler/strictFunctionTypesErrors.ts(75,1): error TS2322: Type 'Func<string, Func<Object, void>>' is not assignable to type 'Func<Object, Func<Object, void>>'.
  Type 'Object' is not assignable to type 'string'.
tests/cases/compiler/strictFunctionTypesErrors.ts(76,1): error TS2322: Type 'Func<string, Func<string, void>>' is not assignable to type 'Func<Object, Func<Object, void>>'.
  Type 'Object' is not assignable to type 'string'.
tests/cases/compiler/strictFunctionTypesErrors.ts(79,1): error TS2322: Type 'Func<string, Func<Object, void>>' is not assignable to type 'Func<Object, Func<string, void>>'.
  Type 'Object' is not assignable to type 'string'.
tests/cases/compiler/strictFunctionTypesErrors.ts(80,1): error TS2322: Type 'Func<string, Func<string, void>>' is not assignable to type 'Func<Object, Func<string, void>>'.
  Type 'Object' is not assignable to type 'string'.
tests/cases/compiler/strictFunctionTypesErrors.ts(83,1): error TS2322: Type 'Func<Object, Func<string, void>>' is not assignable to type 'Func<string, Func<Object, void>>'.
  Type 'Func<string, void>' is not assignable to type 'Func<Object, void>'.
tests/cases/compiler/strictFunctionTypesErrors.ts(84,1): error TS2322: Type 'Func<string, Func<string, void>>' is not assignable to type 'Func<string, Func<Object, void>>'.
  Type 'Func<string, void>' is not assignable to type 'Func<Object, void>'.
tests/cases/compiler/strictFunctionTypesErrors.ts(111,1): error TS2322: Type 'Comparer2<Dog>' is not assignable to type 'Comparer2<Animal>'.
  Property 'dog' is missing in type 'Animal' but required in type 'Dog'.
tests/cases/compiler/strictFunctionTypesErrors.ts(126,1): error TS2322: Type 'Crate<Dog>' is not assignable to type 'Crate<Animal>'.
  Types of property 'onSetItem' are incompatible.
    Type '(item: Dog) => void' is not assignable to type '(item: Animal) => void'.
      Types of parameters 'item' and 'item' are incompatible.
        Type 'Animal' is not assignable to type 'Dog'.
tests/cases/compiler/strictFunctionTypesErrors.ts(127,1): error TS2322: Type 'Crate<Animal>' is not assignable to type 'Crate<Dog>'.
  Types of property 'item' are incompatible.
    Type 'Animal' is not assignable to type 'Dog'.
tests/cases/compiler/strictFunctionTypesErrors.ts(133,1): error TS2322: Type '(f: (x: Dog) => Dog) => void' is not assignable to type '(f: (x: Animal) => Animal) => void'.
  Types of parameters 'f' and 'f' are incompatible.
    Type 'Animal' is not assignable to type 'Dog'.
tests/cases/compiler/strictFunctionTypesErrors.ts(134,1): error TS2322: Type '(f: (x: Animal) => Animal) => void' is not assignable to type '(f: (x: Dog) => Dog) => void'.
  Types of parameters 'f' and 'f' are incompatible.
    Types of parameters 'x' and 'x' are incompatible.
      Type 'Animal' is not assignable to type 'Dog'.
tests/cases/compiler/strictFunctionTypesErrors.ts(147,5): error TS2322: Type '(cb: (x: Animal) => Animal) => void' is not assignable to type '(cb: (x: Dog) => Animal) => void'.
  Types of parameters 'cb' and 'cb' are incompatible.
    Types of parameters 'x' and 'x' are incompatible.
      Type 'Animal' is not assignable to type 'Dog'.
tests/cases/compiler/strictFunctionTypesErrors.ts(155,5): error TS2322: Type '(cb: (x: Animal) => Animal) => void' is not assignable to type '(cb: (x: Dog) => Animal) => void'.
  Types of parameters 'cb' and 'cb' are incompatible.
    Types of parameters 'x' and 'x' are incompatible.
      Type 'Animal' is not assignable to type 'Dog'.


==== tests/cases/compiler/strictFunctionTypesErrors.ts (35 errors) ====
    export {}
    
    
    declare let f1: (x: Object) => Object;
    declare let f2: (x: Object) => string;
    declare let f3: (x: string) => Object;
    declare let f4: (x: string) => string;
    
    f1 = f2;  // Ok
    f1 = f3;  // Error
    ~~
!!! error TS2322: Type '(x: string) => {|Object|0|}' is not assignable to type '(x: {|Object|1|}) => {|Object|2|}'.
!!! error TS2322:   Types of parameters 'x' and 'x' are incompatible.
!!! error TS2322:     Type '{|Object|3|}' is not assignable to type 'string'.
!!! annotated symbol 0 /.ts/lib.es5.d.ts:120:11
!!! annotated symbol 1 /.ts/lib.es5.d.ts:120:11
!!! annotated symbol 2 /.ts/lib.es5.d.ts:120:11
!!! annotated symbol 3 /.ts/lib.es5.d.ts:120:11
    f1 = f4;  // Error
    ~~
!!! error TS2322: Type '(x: string) => string' is not assignable to type '(x: {|Object|0|}) => {|Object|1|}'.
!!! error TS2322:   Types of parameters 'x' and 'x' are incompatible.
!!! error TS2322:     Type '{|Object|2|}' is not assignable to type 'string'.
!!! annotated symbol 0 /.ts/lib.es5.d.ts:120:11
!!! annotated symbol 1 /.ts/lib.es5.d.ts:120:11
!!! annotated symbol 2 /.ts/lib.es5.d.ts:120:11
    
    f2 = f1;  // Error
    ~~
!!! error TS2322: Type '(x: {|Object|0|}) => {|Object|1|}' is not assignable to type '(x: {|Object|2|}) => string'.
!!! error TS2322:   Type '{|Object|3|}' is not assignable to type 'string'.
!!! annotated symbol 0 /.ts/lib.es5.d.ts:120:11
!!! annotated symbol 1 /.ts/lib.es5.d.ts:120:11
!!! annotated symbol 2 /.ts/lib.es5.d.ts:120:11
!!! annotated symbol 3 /.ts/lib.es5.d.ts:120:11
    f2 = f3;  // Error
    ~~
!!! error TS2322: Type '(x: string) => {|Object|0|}' is not assignable to type '(x: {|Object|1|}) => string'.
!!! error TS2322:   Types of parameters 'x' and 'x' are incompatible.
!!! error TS2322:     Type '{|Object|2|}' is not assignable to type 'string'.
!!! annotated symbol 0 /.ts/lib.es5.d.ts:120:11
!!! annotated symbol 1 /.ts/lib.es5.d.ts:120:11
!!! annotated symbol 2 /.ts/lib.es5.d.ts:120:11
    f2 = f4;  // Error
    ~~
!!! error TS2322: Type '(x: string) => string' is not assignable to type '(x: {|Object|0|}) => string'.
!!! error TS2322:   Types of parameters 'x' and 'x' are incompatible.
!!! error TS2322:     Type '{|Object|1|}' is not assignable to type 'string'.
!!! annotated symbol 0 /.ts/lib.es5.d.ts:120:11
!!! annotated symbol 1 /.ts/lib.es5.d.ts:120:11
    
    f3 = f1;  // Ok
    f3 = f2;  // Ok
    f3 = f4;  // Ok
    
    f4 = f1;  // Error
    ~~
!!! error TS2322: Type '(x: {|Object|0|}) => {|Object|1|}' is not assignable to type '(x: string) => string'.
!!! error TS2322:   Type '{|Object|2|}' is not assignable to type 'string'.
!!! annotated symbol 0 /.ts/lib.es5.d.ts:120:11
!!! annotated symbol 1 /.ts/lib.es5.d.ts:120:11
!!! annotated symbol 2 /.ts/lib.es5.d.ts:120:11
    f4 = f2;  // Ok
    f4 = f3;  // Error
    ~~
!!! error TS2322: Type '(x: string) => {|Object|0|}' is not assignable to type '(x: string) => string'.
!!! error TS2322:   Type '{|Object|1|}' is not assignable to type 'string'.
!!! annotated symbol 0 /.ts/lib.es5.d.ts:120:11
!!! annotated symbol 1 /.ts/lib.es5.d.ts:120:11
    
    type Func<T, U> = (x: T) => U;
    
    declare let g1: Func<Object, Object>;
    declare let g2: Func<Object, string>;
    declare let g3: Func<string, Object>;
    declare let g4: Func<string, string>;
    
    g1 = g2;  // Ok
    g1 = g3;  // Error
    ~~
!!! error TS2322: Type '{|Func|0|}<string, {|Object|1|}>' is not assignable to type '{|Func|2|}<{|Object|3|}, {|Object|4|}>'.
!!! error TS2322:   Type '{|Object|5|}' is not assignable to type 'string'.
!!! annotated symbol 0 tests/cases/compiler/strictFunctionTypesErrors.ts:25:6
!!! annotated symbol 1 /.ts/lib.es5.d.ts:120:11
!!! annotated symbol 2 tests/cases/compiler/strictFunctionTypesErrors.ts:25:6
!!! annotated symbol 3 /.ts/lib.es5.d.ts:120:11
!!! annotated symbol 4 /.ts/lib.es5.d.ts:120:11
!!! annotated symbol 5 /.ts/lib.es5.d.ts:120:11
    g1 = g4;  // Error
    ~~
!!! error TS2322: Type '{|Func|0|}<string, string>' is not assignable to type '{|Func|1|}<{|Object|2|}, {|Object|3|}>'.
!!! error TS2322:   Type '{|Object|4|}' is not assignable to type 'string'.
!!! annotated symbol 0 tests/cases/compiler/strictFunctionTypesErrors.ts:25:6
!!! annotated symbol 1 tests/cases/compiler/strictFunctionTypesErrors.ts:25:6
!!! annotated symbol 2 /.ts/lib.es5.d.ts:120:11
!!! annotated symbol 3 /.ts/lib.es5.d.ts:120:11
!!! annotated symbol 4 /.ts/lib.es5.d.ts:120:11
    
    g2 = g1;  // Error
    ~~
!!! error TS2322: Type '{|Func|0|}<{|Object|1|}, {|Object|2|}>' is not assignable to type '{|Func|3|}<{|Object|4|}, string>'.
!!! error TS2322:   Type '{|Object|5|}' is not assignable to type 'string'.
!!! annotated symbol 0 tests/cases/compiler/strictFunctionTypesErrors.ts:25:6
!!! annotated symbol 1 /.ts/lib.es5.d.ts:120:11
!!! annotated symbol 2 /.ts/lib.es5.d.ts:120:11
!!! annotated symbol 3 tests/cases/compiler/strictFunctionTypesErrors.ts:25:6
!!! annotated symbol 4 /.ts/lib.es5.d.ts:120:11
!!! annotated symbol 5 /.ts/lib.es5.d.ts:120:11
    g2 = g3;  // Error
    ~~
!!! error TS2322: Type '{|Func|0|}<string, {|Object|1|}>' is not assignable to type '{|Func|2|}<{|Object|3|}, string>'.
!!! error TS2322:   Type '{|Object|4|}' is not assignable to type 'string'.
!!! annotated symbol 0 tests/cases/compiler/strictFunctionTypesErrors.ts:25:6
!!! annotated symbol 1 /.ts/lib.es5.d.ts:120:11
!!! annotated symbol 2 tests/cases/compiler/strictFunctionTypesErrors.ts:25:6
!!! annotated symbol 3 /.ts/lib.es5.d.ts:120:11
!!! annotated symbol 4 /.ts/lib.es5.d.ts:120:11
    g2 = g4;  // Error
    ~~
!!! error TS2322: Type '{|Func|0|}<string, string>' is not assignable to type '{|Func|1|}<{|Object|2|}, string>'.
!!! error TS2322:   Type '{|Object|3|}' is not assignable to type 'string'.
!!! annotated symbol 0 tests/cases/compiler/strictFunctionTypesErrors.ts:25:6
!!! annotated symbol 1 tests/cases/compiler/strictFunctionTypesErrors.ts:25:6
!!! annotated symbol 2 /.ts/lib.es5.d.ts:120:11
!!! annotated symbol 3 /.ts/lib.es5.d.ts:120:11
    
    g3 = g1;  // Ok
    g3 = g2;  // Ok
    g3 = g4;  // Ok
    
    g4 = g1;  // Error
    ~~
!!! error TS2322: Type '{|Func|0|}<{|Object|1|}, {|Object|2|}>' is not assignable to type '{|Func|3|}<string, string>'.
!!! error TS2322:   Type '{|Object|4|}' is not assignable to type 'string'.
!!! annotated symbol 0 tests/cases/compiler/strictFunctionTypesErrors.ts:25:6
!!! annotated symbol 1 /.ts/lib.es5.d.ts:120:11
!!! annotated symbol 2 /.ts/lib.es5.d.ts:120:11
!!! annotated symbol 3 tests/cases/compiler/strictFunctionTypesErrors.ts:25:6
!!! annotated symbol 4 /.ts/lib.es5.d.ts:120:11
    g4 = g2;  // Ok
    g4 = g3;  // Error
    ~~
!!! error TS2322: Type '{|Func|0|}<string, {|Object|1|}>' is not assignable to type '{|Func|2|}<string, string>'.
!!! error TS2322:   Type '{|Object|3|}' is not assignable to type 'string'.
!!! annotated symbol 0 tests/cases/compiler/strictFunctionTypesErrors.ts:25:6
!!! annotated symbol 1 /.ts/lib.es5.d.ts:120:11
!!! annotated symbol 2 tests/cases/compiler/strictFunctionTypesErrors.ts:25:6
!!! annotated symbol 3 /.ts/lib.es5.d.ts:120:11
    
    declare let h1: Func<Func<Object, void>, Object>;
    declare let h2: Func<Func<Object, void>, string>;
    declare let h3: Func<Func<string, void>, Object>;
    declare let h4: Func<Func<string, void>, string>;
    
    h1 = h2;  // Ok
    h1 = h3;  // Ok
    h1 = h4;  // Ok
    
    h2 = h1;  // Error
    ~~
!!! error TS2322: Type '{|Func|0|}<{|Func|1|}<{|Object|2|}, void>, {|Object|3|}>' is not assignable to type '{|Func|4|}<{|Func|5|}<{|Object|6|}, void>, string>'.
!!! error TS2322:   Type '{|Object|7|}' is not assignable to type 'string'.
!!! annotated symbol 0 tests/cases/compiler/strictFunctionTypesErrors.ts:25:6
!!! annotated symbol 1 tests/cases/compiler/strictFunctionTypesErrors.ts:25:6
!!! annotated symbol 2 /.ts/lib.es5.d.ts:120:11
!!! annotated symbol 3 /.ts/lib.es5.d.ts:120:11
!!! annotated symbol 4 tests/cases/compiler/strictFunctionTypesErrors.ts:25:6
!!! annotated symbol 5 tests/cases/compiler/strictFunctionTypesErrors.ts:25:6
!!! annotated symbol 6 /.ts/lib.es5.d.ts:120:11
!!! annotated symbol 7 /.ts/lib.es5.d.ts:120:11
    h2 = h3;  // Error
    ~~
!!! error TS2322: Type '{|Func|0|}<{|Func|1|}<string, void>, {|Object|2|}>' is not assignable to type '{|Func|3|}<{|Func|4|}<{|Object|5|}, void>, string>'.
!!! error TS2322:   Type '{|Object|6|}' is not assignable to type 'string'.
!!! annotated symbol 0 tests/cases/compiler/strictFunctionTypesErrors.ts:25:6
!!! annotated symbol 1 tests/cases/compiler/strictFunctionTypesErrors.ts:25:6
!!! annotated symbol 2 /.ts/lib.es5.d.ts:120:11
!!! annotated symbol 3 tests/cases/compiler/strictFunctionTypesErrors.ts:25:6
!!! annotated symbol 4 tests/cases/compiler/strictFunctionTypesErrors.ts:25:6
!!! annotated symbol 5 /.ts/lib.es5.d.ts:120:11
!!! annotated symbol 6 /.ts/lib.es5.d.ts:120:11
    h2 = h4;  // Ok
    
    h3 = h1;  // Error
    ~~
!!! error TS2322: Type '{|Func|0|}<{|Func|1|}<{|Object|2|}, void>, {|Object|3|}>' is not assignable to type '{|Func|4|}<{|Func|5|}<string, void>, {|Object|6|}>'.
!!! error TS2322:   Type '{|Func|7|}<string, void>' is not assignable to type '{|Func|8|}<{|Object|9|}, void>'.
!!! error TS2322:     Type '{|Object|10|}' is not assignable to type 'string'.
!!! annotated symbol 0 tests/cases/compiler/strictFunctionTypesErrors.ts:25:6
!!! annotated symbol 1 tests/cases/compiler/strictFunctionTypesErrors.ts:25:6
!!! annotated symbol 2 /.ts/lib.es5.d.ts:120:11
!!! annotated symbol 3 /.ts/lib.es5.d.ts:120:11
!!! annotated symbol 4 tests/cases/compiler/strictFunctionTypesErrors.ts:25:6
!!! annotated symbol 5 tests/cases/compiler/strictFunctionTypesErrors.ts:25:6
!!! annotated symbol 6 /.ts/lib.es5.d.ts:120:11
!!! annotated symbol 7 tests/cases/compiler/strictFunctionTypesErrors.ts:25:6
!!! annotated symbol 8 tests/cases/compiler/strictFunctionTypesErrors.ts:25:6
!!! annotated symbol 9 /.ts/lib.es5.d.ts:120:11
!!! annotated symbol 10 /.ts/lib.es5.d.ts:120:11
    h3 = h2;  // Error
    ~~
!!! error TS2322: Type '{|Func|0|}<{|Func|1|}<{|Object|2|}, void>, string>' is not assignable to type '{|Func|3|}<{|Func|4|}<string, void>, {|Object|5|}>'.
!!! error TS2322:   Type '{|Func|6|}<string, void>' is not assignable to type '{|Func|7|}<{|Object|8|}, void>'.
!!! annotated symbol 0 tests/cases/compiler/strictFunctionTypesErrors.ts:25:6
!!! annotated symbol 1 tests/cases/compiler/strictFunctionTypesErrors.ts:25:6
!!! annotated symbol 2 /.ts/lib.es5.d.ts:120:11
!!! annotated symbol 3 tests/cases/compiler/strictFunctionTypesErrors.ts:25:6
!!! annotated symbol 4 tests/cases/compiler/strictFunctionTypesErrors.ts:25:6
!!! annotated symbol 5 /.ts/lib.es5.d.ts:120:11
!!! annotated symbol 6 tests/cases/compiler/strictFunctionTypesErrors.ts:25:6
!!! annotated symbol 7 tests/cases/compiler/strictFunctionTypesErrors.ts:25:6
!!! annotated symbol 8 /.ts/lib.es5.d.ts:120:11
    h3 = h4;  // Ok
    
    h4 = h1;  // Error
    ~~
!!! error TS2322: Type '{|Func|0|}<{|Func|1|}<{|Object|2|}, void>, {|Object|3|}>' is not assignable to type '{|Func|4|}<{|Func|5|}<string, void>, string>'.
!!! error TS2322:   Type '{|Func|6|}<string, void>' is not assignable to type '{|Func|7|}<{|Object|8|}, void>'.
!!! annotated symbol 0 tests/cases/compiler/strictFunctionTypesErrors.ts:25:6
!!! annotated symbol 1 tests/cases/compiler/strictFunctionTypesErrors.ts:25:6
!!! annotated symbol 2 /.ts/lib.es5.d.ts:120:11
!!! annotated symbol 3 /.ts/lib.es5.d.ts:120:11
!!! annotated symbol 4 tests/cases/compiler/strictFunctionTypesErrors.ts:25:6
!!! annotated symbol 5 tests/cases/compiler/strictFunctionTypesErrors.ts:25:6
!!! annotated symbol 6 tests/cases/compiler/strictFunctionTypesErrors.ts:25:6
!!! annotated symbol 7 tests/cases/compiler/strictFunctionTypesErrors.ts:25:6
!!! annotated symbol 8 /.ts/lib.es5.d.ts:120:11
    h4 = h2;  // Error
    ~~
!!! error TS2322: Type '{|Func|0|}<{|Func|1|}<{|Object|2|}, void>, string>' is not assignable to type '{|Func|3|}<{|Func|4|}<string, void>, string>'.
!!! error TS2322:   Type '{|Func|5|}<string, void>' is not assignable to type '{|Func|6|}<{|Object|7|}, void>'.
!!! annotated symbol 0 tests/cases/compiler/strictFunctionTypesErrors.ts:25:6
!!! annotated symbol 1 tests/cases/compiler/strictFunctionTypesErrors.ts:25:6
!!! annotated symbol 2 /.ts/lib.es5.d.ts:120:11
!!! annotated symbol 3 tests/cases/compiler/strictFunctionTypesErrors.ts:25:6
!!! annotated symbol 4 tests/cases/compiler/strictFunctionTypesErrors.ts:25:6
!!! annotated symbol 5 tests/cases/compiler/strictFunctionTypesErrors.ts:25:6
!!! annotated symbol 6 tests/cases/compiler/strictFunctionTypesErrors.ts:25:6
!!! annotated symbol 7 /.ts/lib.es5.d.ts:120:11
    h4 = h3;  // Error
    ~~
!!! error TS2322: Type '{|Func|0|}<{|Func|1|}<string, void>, {|Object|2|}>' is not assignable to type '{|Func|3|}<{|Func|4|}<string, void>, string>'.
!!! error TS2322:   Type '{|Object|5|}' is not assignable to type 'string'.
!!! annotated symbol 0 tests/cases/compiler/strictFunctionTypesErrors.ts:25:6
!!! annotated symbol 1 tests/cases/compiler/strictFunctionTypesErrors.ts:25:6
!!! annotated symbol 2 /.ts/lib.es5.d.ts:120:11
!!! annotated symbol 3 tests/cases/compiler/strictFunctionTypesErrors.ts:25:6
!!! annotated symbol 4 tests/cases/compiler/strictFunctionTypesErrors.ts:25:6
!!! annotated symbol 5 /.ts/lib.es5.d.ts:120:11
    
    declare let i1: Func<Object, Func<Object, void>>;
    declare let i2: Func<Object, Func<string, void>>;
    declare let i3: Func<string, Func<Object, void>>;
    declare let i4: Func<string, Func<string, void>>;
    
    i1 = i2;  // Error
    ~~
!!! error TS2322: Type '{|Func|0|}<{|Object|1|}, {|Func|2|}<string, void>>' is not assignable to type '{|Func|3|}<{|Object|4|}, {|Func|5|}<{|Object|6|}, void>>'.
!!! error TS2322:   Type '{|Func|7|}<string, void>' is not assignable to type '{|Func|8|}<{|Object|9|}, void>'.
!!! annotated symbol 0 tests/cases/compiler/strictFunctionTypesErrors.ts:25:6
!!! annotated symbol 1 /.ts/lib.es5.d.ts:120:11
!!! annotated symbol 2 tests/cases/compiler/strictFunctionTypesErrors.ts:25:6
!!! annotated symbol 3 tests/cases/compiler/strictFunctionTypesErrors.ts:25:6
!!! annotated symbol 4 /.ts/lib.es5.d.ts:120:11
!!! annotated symbol 5 tests/cases/compiler/strictFunctionTypesErrors.ts:25:6
!!! annotated symbol 6 /.ts/lib.es5.d.ts:120:11
!!! annotated symbol 7 tests/cases/compiler/strictFunctionTypesErrors.ts:25:6
!!! annotated symbol 8 tests/cases/compiler/strictFunctionTypesErrors.ts:25:6
!!! annotated symbol 9 /.ts/lib.es5.d.ts:120:11
    i1 = i3;  // Error
    ~~
!!! error TS2322: Type '{|Func|0|}<string, {|Func|1|}<{|Object|2|}, void>>' is not assignable to type '{|Func|3|}<{|Object|4|}, {|Func|5|}<{|Object|6|}, void>>'.
!!! error TS2322:   Type '{|Object|7|}' is not assignable to type 'string'.
!!! annotated symbol 0 tests/cases/compiler/strictFunctionTypesErrors.ts:25:6
!!! annotated symbol 1 tests/cases/compiler/strictFunctionTypesErrors.ts:25:6
!!! annotated symbol 2 /.ts/lib.es5.d.ts:120:11
!!! annotated symbol 3 tests/cases/compiler/strictFunctionTypesErrors.ts:25:6
!!! annotated symbol 4 /.ts/lib.es5.d.ts:120:11
!!! annotated symbol 5 tests/cases/compiler/strictFunctionTypesErrors.ts:25:6
!!! annotated symbol 6 /.ts/lib.es5.d.ts:120:11
!!! annotated symbol 7 /.ts/lib.es5.d.ts:120:11
    i1 = i4;  // Error
    ~~
!!! error TS2322: Type '{|Func|0|}<string, {|Func|1|}<string, void>>' is not assignable to type '{|Func|2|}<{|Object|3|}, {|Func|4|}<{|Object|5|}, void>>'.
!!! error TS2322:   Type '{|Object|6|}' is not assignable to type 'string'.
!!! annotated symbol 0 tests/cases/compiler/strictFunctionTypesErrors.ts:25:6
!!! annotated symbol 1 tests/cases/compiler/strictFunctionTypesErrors.ts:25:6
!!! annotated symbol 2 tests/cases/compiler/strictFunctionTypesErrors.ts:25:6
!!! annotated symbol 3 /.ts/lib.es5.d.ts:120:11
!!! annotated symbol 4 tests/cases/compiler/strictFunctionTypesErrors.ts:25:6
!!! annotated symbol 5 /.ts/lib.es5.d.ts:120:11
!!! annotated symbol 6 /.ts/lib.es5.d.ts:120:11
    
    i2 = i1;  // Ok
    i2 = i3;  // Error
    ~~
!!! error TS2322: Type '{|Func|0|}<string, {|Func|1|}<{|Object|2|}, void>>' is not assignable to type '{|Func|3|}<{|Object|4|}, {|Func|5|}<string, void>>'.
!!! error TS2322:   Type '{|Object|6|}' is not assignable to type 'string'.
!!! annotated symbol 0 tests/cases/compiler/strictFunctionTypesErrors.ts:25:6
!!! annotated symbol 1 tests/cases/compiler/strictFunctionTypesErrors.ts:25:6
!!! annotated symbol 2 /.ts/lib.es5.d.ts:120:11
!!! annotated symbol 3 tests/cases/compiler/strictFunctionTypesErrors.ts:25:6
!!! annotated symbol 4 /.ts/lib.es5.d.ts:120:11
!!! annotated symbol 5 tests/cases/compiler/strictFunctionTypesErrors.ts:25:6
!!! annotated symbol 6 /.ts/lib.es5.d.ts:120:11
    i2 = i4;  // Error
    ~~
!!! error TS2322: Type '{|Func|0|}<string, {|Func|1|}<string, void>>' is not assignable to type '{|Func|2|}<{|Object|3|}, {|Func|4|}<string, void>>'.
!!! error TS2322:   Type '{|Object|5|}' is not assignable to type 'string'.
!!! annotated symbol 0 tests/cases/compiler/strictFunctionTypesErrors.ts:25:6
!!! annotated symbol 1 tests/cases/compiler/strictFunctionTypesErrors.ts:25:6
!!! annotated symbol 2 tests/cases/compiler/strictFunctionTypesErrors.ts:25:6
!!! annotated symbol 3 /.ts/lib.es5.d.ts:120:11
!!! annotated symbol 4 tests/cases/compiler/strictFunctionTypesErrors.ts:25:6
!!! annotated symbol 5 /.ts/lib.es5.d.ts:120:11
    
    i3 = i1;  // Ok
    i3 = i2;  // Error
    ~~
!!! error TS2322: Type '{|Func|0|}<{|Object|1|}, {|Func|2|}<string, void>>' is not assignable to type '{|Func|3|}<string, {|Func|4|}<{|Object|5|}, void>>'.
!!! error TS2322:   Type '{|Func|6|}<string, void>' is not assignable to type '{|Func|7|}<{|Object|8|}, void>'.
!!! annotated symbol 0 tests/cases/compiler/strictFunctionTypesErrors.ts:25:6
!!! annotated symbol 1 /.ts/lib.es5.d.ts:120:11
!!! annotated symbol 2 tests/cases/compiler/strictFunctionTypesErrors.ts:25:6
!!! annotated symbol 3 tests/cases/compiler/strictFunctionTypesErrors.ts:25:6
!!! annotated symbol 4 tests/cases/compiler/strictFunctionTypesErrors.ts:25:6
!!! annotated symbol 5 /.ts/lib.es5.d.ts:120:11
!!! annotated symbol 6 tests/cases/compiler/strictFunctionTypesErrors.ts:25:6
!!! annotated symbol 7 tests/cases/compiler/strictFunctionTypesErrors.ts:25:6
!!! annotated symbol 8 /.ts/lib.es5.d.ts:120:11
    i3 = i4;  // Error
    ~~
!!! error TS2322: Type '{|Func|0|}<string, {|Func|1|}<string, void>>' is not assignable to type '{|Func|2|}<string, {|Func|3|}<{|Object|4|}, void>>'.
!!! error TS2322:   Type '{|Func|5|}<string, void>' is not assignable to type '{|Func|6|}<{|Object|7|}, void>'.
!!! annotated symbol 0 tests/cases/compiler/strictFunctionTypesErrors.ts:25:6
!!! annotated symbol 1 tests/cases/compiler/strictFunctionTypesErrors.ts:25:6
!!! annotated symbol 2 tests/cases/compiler/strictFunctionTypesErrors.ts:25:6
!!! annotated symbol 3 tests/cases/compiler/strictFunctionTypesErrors.ts:25:6
!!! annotated symbol 4 /.ts/lib.es5.d.ts:120:11
!!! annotated symbol 5 tests/cases/compiler/strictFunctionTypesErrors.ts:25:6
!!! annotated symbol 6 tests/cases/compiler/strictFunctionTypesErrors.ts:25:6
!!! annotated symbol 7 /.ts/lib.es5.d.ts:120:11
    
    i4 = i1;  // Ok
    i4 = i2;  // Ok
    i4 = i3;  // Ok
    
    interface Animal { animal: void }
    interface Dog extends Animal { dog: void }
    interface Cat extends Animal { cat: void }
    
    interface Comparer1<T> {
        compare(a: T, b: T): number;
    }
    
    declare let animalComparer1: Comparer1<Animal>;
    declare let dogComparer1: Comparer1<Dog>;
    
    animalComparer1 = dogComparer1;  // Ok
    dogComparer1 = animalComparer1;  // Ok
    
    interface Comparer2<T> {
        compare: (a: T, b: T) => number;
    }
    
    declare let animalComparer2: Comparer2<Animal>;
    declare let dogComparer2: Comparer2<Dog>;
    
    animalComparer2 = dogComparer2;  // Error
    ~~~~~~~~~~~~~~~
!!! error TS2322: Type '{|Comparer2|0|}<{|Dog|1|}>' is not assignable to type '{|Comparer2|2|}<{|Animal|3|}>'.
!!! error TS2322:   Property 'dog' is missing in type 'Animal' but required in type 'Dog'.
!!! related TS2728 tests/cases/compiler/strictFunctionTypesErrors.ts:91:32: 'dog' is declared here.
!!! annotated symbol 0 tests/cases/compiler/strictFunctionTypesErrors.ts:104:11
!!! annotated symbol 1 tests/cases/compiler/strictFunctionTypesErrors.ts:91:11
!!! annotated symbol 2 tests/cases/compiler/strictFunctionTypesErrors.ts:104:11
!!! annotated symbol 3 tests/cases/compiler/strictFunctionTypesErrors.ts:90:11
    dogComparer2 = animalComparer2;  // Ok
    
    // Crate<T> is invariant in --strictFunctionTypes mode
    
    interface Crate<T> {
        item: T;
        onSetItem: (item: T) => void;
    }
    
    declare let animalCrate: Crate<Animal>;
    declare let dogCrate: Crate<Dog>;
    
    // Errors below should elaborate the reason for invariance
    
    animalCrate = dogCrate;  // Error
    ~~~~~~~~~~~
!!! error TS2322: Type '{|Crate|0|}<{|Dog|1|}>' is not assignable to type '{|Crate|2|}<{|Animal|3|}>'.
!!! error TS2322:   Types of property 'onSetItem' are incompatible.
!!! error TS2322:     Type '(item: {|Dog|4|}) => void' is not assignable to type '(item: {|Animal|5|}) => void'.
!!! error TS2322:       Types of parameters 'item' and 'item' are incompatible.
!!! error TS2322:         Type '{|Animal|6|}' is not assignable to type '{|Dog|7|}'.
!!! annotated symbol 0 tests/cases/compiler/strictFunctionTypesErrors.ts:116:11
!!! annotated symbol 1 tests/cases/compiler/strictFunctionTypesErrors.ts:91:11
!!! annotated symbol 2 tests/cases/compiler/strictFunctionTypesErrors.ts:116:11
!!! annotated symbol 3 tests/cases/compiler/strictFunctionTypesErrors.ts:90:11
!!! annotated symbol 4 tests/cases/compiler/strictFunctionTypesErrors.ts:91:11
!!! annotated symbol 5 tests/cases/compiler/strictFunctionTypesErrors.ts:90:11
!!! annotated symbol 6 tests/cases/compiler/strictFunctionTypesErrors.ts:90:11
!!! annotated symbol 7 tests/cases/compiler/strictFunctionTypesErrors.ts:91:11
    dogCrate = animalCrate;  // Error
    ~~~~~~~~
!!! error TS2322: Type '{|Crate|0|}<{|Animal|1|}>' is not assignable to type '{|Crate|2|}<{|Dog|3|}>'.
!!! error TS2322:   Types of property 'item' are incompatible.
!!! error TS2322:     Type '{|Animal|4|}' is not assignable to type '{|Dog|5|}'.
!!! annotated symbol 0 tests/cases/compiler/strictFunctionTypesErrors.ts:116:11
!!! annotated symbol 1 tests/cases/compiler/strictFunctionTypesErrors.ts:90:11
!!! annotated symbol 2 tests/cases/compiler/strictFunctionTypesErrors.ts:116:11
!!! annotated symbol 3 tests/cases/compiler/strictFunctionTypesErrors.ts:91:11
!!! annotated symbol 4 tests/cases/compiler/strictFunctionTypesErrors.ts:90:11
!!! annotated symbol 5 tests/cases/compiler/strictFunctionTypesErrors.ts:91:11
    
    // Verify that callback parameters are strictly checked
    
    declare let fc1: (f: (x: Animal) => Animal) => void;
    declare let fc2: (f: (x: Dog) => Dog) => void;
    fc1 = fc2;  // Error
    ~~~
!!! error TS2322: Type '(f: (x: {|Dog|0|}) => {|Dog|1|}) => void' is not assignable to type '(f: (x: {|Animal|2|}) => {|Animal|3|}) => void'.
!!! error TS2322:   Types of parameters 'f' and 'f' are incompatible.
!!! error TS2322:     Type '{|Animal|4|}' is not assignable to type '{|Dog|5|}'.
!!! annotated symbol 0 tests/cases/compiler/strictFunctionTypesErrors.ts:91:11
!!! annotated symbol 1 tests/cases/compiler/strictFunctionTypesErrors.ts:91:11
!!! annotated symbol 2 tests/cases/compiler/strictFunctionTypesErrors.ts:90:11
!!! annotated symbol 3 tests/cases/compiler/strictFunctionTypesErrors.ts:90:11
!!! annotated symbol 4 tests/cases/compiler/strictFunctionTypesErrors.ts:90:11
!!! annotated symbol 5 tests/cases/compiler/strictFunctionTypesErrors.ts:91:11
    fc2 = fc1;  // Error
    ~~~
!!! error TS2322: Type '(f: (x: {|Animal|0|}) => {|Animal|1|}) => void' is not assignable to type '(f: (x: {|Dog|2|}) => {|Dog|3|}) => void'.
!!! error TS2322:   Types of parameters 'f' and 'f' are incompatible.
!!! error TS2322:     Types of parameters 'x' and 'x' are incompatible.
!!! error TS2322:       Type '{|Animal|4|}' is not assignable to type '{|Dog|5|}'.
!!! annotated symbol 0 tests/cases/compiler/strictFunctionTypesErrors.ts:90:11
!!! annotated symbol 1 tests/cases/compiler/strictFunctionTypesErrors.ts:90:11
!!! annotated symbol 2 tests/cases/compiler/strictFunctionTypesErrors.ts:91:11
!!! annotated symbol 3 tests/cases/compiler/strictFunctionTypesErrors.ts:91:11
!!! annotated symbol 4 tests/cases/compiler/strictFunctionTypesErrors.ts:90:11
!!! annotated symbol 5 tests/cases/compiler/strictFunctionTypesErrors.ts:91:11
    
    // Verify that callback parameters aren't loosely checked when types
    // originate in method declarations
    
    namespace n1 {
        class Foo {
            static f1(x: Animal): Animal { throw "wat"; }
            static f2(x: Dog): Animal { throw "wat"; };
        }
        declare let f1: (cb: typeof Foo.f1) => void;
        declare let f2: (cb: typeof Foo.f2) => void;
        f1 = f2;
        f2 = f1;  // Error
        ~~
!!! error TS2322: Type '(cb: (x: {|Animal|0|}) => {|Animal|1|}) => void' is not assignable to type '(cb: (x: {|Dog|2|}) => {|Animal|3|}) => void'.
!!! error TS2322:   Types of parameters 'cb' and 'cb' are incompatible.
!!! error TS2322:     Types of parameters 'x' and 'x' are incompatible.
!!! error TS2322:       Type '{|Animal|4|}' is not assignable to type '{|Dog|5|}'.
!!! annotated symbol 0 tests/cases/compiler/strictFunctionTypesErrors.ts:90:11
!!! annotated symbol 1 tests/cases/compiler/strictFunctionTypesErrors.ts:90:11
!!! annotated symbol 2 tests/cases/compiler/strictFunctionTypesErrors.ts:91:11
!!! annotated symbol 3 tests/cases/compiler/strictFunctionTypesErrors.ts:90:11
!!! annotated symbol 4 tests/cases/compiler/strictFunctionTypesErrors.ts:90:11
!!! annotated symbol 5 tests/cases/compiler/strictFunctionTypesErrors.ts:91:11
    }
    
    namespace n2 {
        type BivariantHack<Input, Output> = { foo(x: Input): Output }["foo"];
        declare let f1: (cb: BivariantHack<Animal, Animal>) => void;
        declare let f2: (cb: BivariantHack<Dog, Animal>) => void;
        f1 = f2;
        f2 = f1;  // Error
        ~~
!!! error TS2322: Type '(cb: (x: {|Animal|0|}) => {|Animal|1|}) => void' is not assignable to type '(cb: (x: {|Dog|2|}) => {|Animal|3|}) => void'.
!!! error TS2322:   Types of parameters 'cb' and 'cb' are incompatible.
!!! error TS2322:     Types of parameters 'x' and 'x' are incompatible.
!!! error TS2322:       Type '{|Animal|4|}' is not assignable to type '{|Dog|5|}'.
!!! annotated symbol 0 tests/cases/compiler/strictFunctionTypesErrors.ts:90:11
!!! annotated symbol 1 tests/cases/compiler/strictFunctionTypesErrors.ts:90:11
!!! annotated symbol 2 tests/cases/compiler/strictFunctionTypesErrors.ts:91:11
!!! annotated symbol 3 tests/cases/compiler/strictFunctionTypesErrors.ts:90:11
!!! annotated symbol 4 tests/cases/compiler/strictFunctionTypesErrors.ts:90:11
!!! annotated symbol 5 tests/cases/compiler/strictFunctionTypesErrors.ts:91:11
    }